Refactor: Migrate audio quality model to ONNX Runtime and optimize analysis
This commit refactors the audio quality analysis by replacing the PyTorch Mobile implementation with ONNX Runtime for improved performance and compatibility.

Key changes include:

-   **Model Migration to ONNX:**
    -   Replaced the `pytorch_android` dependency with `onnxruntime-android`.
    -   Updated the `SquimAnalyzer` to use the ONNX Runtime (`OrtSession`) for model inference instead of PyTorch `Module`.
    -   Changed the model download logic to fetch a `.onnx` model file (`squim_objective.onnx`) instead of the previous `.ptl` file.

-   **Optimized Audio Analysis:**
    -   The `SquimAnalyzer` now processes audio in 1-second chunks and averages the results. This handles audio of any length and prevents potential memory issues with long recordings.
    -   Audio shorter than 1 second is padded to ensure it can be processed by the model.

-   **Performance and Configuration:**
    -   Removed `SupervisorJob` from the `V2RxInternal` coroutine scope as it was not required.
    -   Reduced the minimum audio duration for quality analysis from 3 seconds to 1 second in `UploadService`.
    -   Added logging to measure and report the time taken for audio quality calculations.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.10.0"
 composeBom = "2023.08.00"
 appcompat = "1.7.0"
 material = "1.12.0"
+onnxruntimeAndroid = "1.23.2"
 silero = "2.0.10"
 awsAndroidSdkS3 = "2.22.0"
 ext-junit = "1.2.0"
@@ -41,6 +42,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+onnxruntime-android = { module = "com.microsoft.onnxruntime:onnxruntime-android", version.ref = "onnxruntimeAndroid" }
 silero = { module = "com.github.gkonovalov.android-vad:silero", version.ref = "silero" }
 ext-junit = { module = "androidx.test.ext:junit", version.ref = "ext-junit" }
 aws-android-sdk-core = { module = "com.amazonaws:aws-android-sdk-core", version.ref = "awsAndroidSdkS3" }
