--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,15 @@
         android:theme="@style/Theme.Voice2Rx"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".TestActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="EkaScribe Test"
             android:theme="@style/Theme.Voice2Rx">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:exported="true"
-            android:name=".WebViewLoginActivity">
         </activity>
     </application>
 
