--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ workRuntimeKtx = "2.8.1"
 kotlinx-coroutines = "1.10.2"
 ok2curl = "0.8.0"
 brotiliVersion = "0.1.2"
+ekascribe_sdk = "3.0.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +59,7 @@ okhttp-urlconnection = { module = "com.squareup.okhttp3:okhttp-urlconnection", v
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit-version" }
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit-version" }
+eka-scribe-sdk = { module = "com.github.eka-care:Eka-Scribe-Android", version.ref = "ekascribe_sdk" }
 haroldadmin-networkresponseadapter = { module = "com.github.haroldadmin:NetworkResponseAdapter", version.ref = "networkresponseadapter" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
