--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.12.3"
-ekaNetworkAndroid = "2.0.3"
+ekaNetworkAndroid = "2.0.4"
+#ekaNetworkAndroid = "2.0.0"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -32,6 +33,7 @@ ekascribe_sdk = "3.0.8"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 eka-network-android = { module = "com.github.eka-care:eka-network-android", version.ref = "ekaNetworkAndroid" }
+#eka-network-android = { module = "com.eka.networking:eka-networking", version.ref = "ekaNetworkAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
