feat: Integrate IndicConformer for real-time Hindi ASR and add Whisper TFLite backend
This commit introduces two significant features to the SDK: a real-time Hindi ASR backend using IndicConformer and a flexible Whisper TFLite backend for on-device transcription.

- **IndicConformer ASR for Real-Time Hindi Transcription:**
    - Integrated a new `IndicConformerASR` class to perform fast, on-device Hindi speech-to-text.
    - Uses ONNX Runtime with a Conformer encoder and RNNT decoder for efficient processing.
    - Added model asset management (`setupIndicConformerAssets`) to copy ONNX models and vocabulary from app assets.
    - Implemented a `MelSpectrogramProcessor` that matches the NeMo toolkit's preprocessing pipeline.
    - `V2RxInternal` now initializes and uses `IndicConformerASR` to process audio chunks, feeding live transcripts into a new `transcriptFlow`.
    - Includes a periodic session reload mechanism in the ASR to manage native memory usage.

- **Whisper TFLite Backend:**
    - Added a complete TFLite-based Whisper ASR implementation (`WhisperEngineTFLite`, `WhisperASR`).
    - The engine supports hardware acceleration with a GPU → NNAPI → CPU fallback chain for optimal performance.
    - Includes a `WhisperModelDownloader` to manage model and vocabulary files, supporting both bundled assets and remote downloads from HuggingFace.
    - Added `TranscriptionService` to orchestrate on-device transcription and persist results to the local database via the new `ChunkTranscription` entity.

- **Database and API Enhancements:**
    - Created a `ChunkTranscription` Room entity and updated `VToRxSessionDao` to store per-chunk transcription results locally. The database version is bumped to 9.
    - Exposed a `getTranscriptFlow()` in the `Voice2Rx` public API to allow clients to observe real-time transcription results.

- **Build & Configuration:**
    - Added TensorFlow Lite and ONNX Runtime dependencies.
    - Configured packaging options in `build.gradle.kt

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ activityCompose = "1.10.0"
 composeBom = "2023.08.00"
 appcompat = "1.7.0"
 material = "1.12.0"
-onnxruntimeAndroid = "1.23.2"
+onnxruntimeAndroid = "1.19.2"
 silero = "2.0.10"
 awsAndroidSdkS3 = "2.22.0"
 ext-junit = "1.2.0"
@@ -29,6 +29,7 @@ kotlinx-coroutines = "1.10.2"
 ok2curl = "0.8.0"
 brotiliVersion = "0.1.2"
 ekascribe_sdk = "3.0.8"
+sherpaOnnx = "v1.12.23"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,6 +69,7 @@ androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 ok2curl = { module = "com.github.mrmike:ok2curl", version.ref = "ok2curl" }
 brotili = { module = "org.brotli:dec", version.ref = "brotiliVersion" }
+sherpa-onnx-android = { module = "com.github.k2-fsa:sherpa-onnx", version.ref = "sherpaOnnx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
