feat: Introduce new EkaScribe SDK module
This commit introduces a new, standalone `scribesdk` module, representing a complete redesign and rebuild of the transcription SDK. The new SDK is designed with a modern, modular, and robust architecture based on Kotlin Coroutines and a pipeline pattern. It replaces the previous `voice2rx_sdk`.

A comprehensive Low-Level Design (LLD) document has also been added to detail the new architecture.

### Key Architectural Changes and Features:

-   **New Public API (`EkaScribe`)**:
    -   Introduces `EkaScribe` as the new singleton entry point (Facade).
    -   Simplifies initialization and session management (`startSession`, `stopSession`, etc.).
    -   Exposes reactive `Flow`s for session state, voice activity, and audio quality.
    -   Uses a dedicated `EkaScribeCallback` for lifecycle events.

-   **Coroutine-based Audio Pipeline**:
    -   Implements a processing pipeline using Kotlin Channels for backpressure-aware, non-blocking I/O.
    -   **Stages**: AudioRecorder → PreBuffer → Analyser (SQUIM) → Chunker (VAD) → Encoder (M4A) → Uploader (S3).
    -   A lock-free `PreBuffer` is used to safely bridge the real-time audio thread and the coroutine pipeline.

-   **Session and Transaction Management**:
    -   A new `SessionManager` handles the session lifecycle with a strict state machine (`IDLE`, `RECORDING`, `PROCESSING`, etc.).
    -   `TransactionManager` orchestrates the multi-step API process: `init`, `stop`, `commit`, and result polling, ensuring a robust and recoverable transaction flow.

-   **On-device Audio Processing**:
    -   **Voice Activity Detection (VAD)**: Integrates Silero VAD to intelligently chunk audio based on speech and silence, replacing fixed-duration chunking.
    -   **Audio Quality Analysis**: Integrates an ONNX-based SQUIM model (`SquimAudioAnalyser`) to provide real-time audio quality metrics (SNR, clipping).

-   **Data Persistence and Upload**:
    -   Introduces a Room database (`ScribeData

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,8 @@ kotlinx-coroutines = "1.10.2"
 ok2curl = "0.8.0"
 brotiliVersion = "0.1.2"
 ekascribe_sdk = "3.0.8"
+appcompatVersion = "1.7.1"
+materialVersion = "1.13.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -68,6 +70,8 @@ androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 ok2curl = { module = "com.github.mrmike:ok2curl", version.ref = "ok2curl" }
 brotili = { module = "org.brotli:dec", version.ref = "brotiliVersion" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompatVersion" }
+material = { group = "com.google.android.material", name = "material", version.ref = "materialVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
